--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -263,7 +263,6 @@ header {
 
 section {
   .sect-info {
-    padding: 30px 0;
     width: 100%;
 
     .sm-flower {
@@ -291,24 +290,51 @@ section {
     justify-content: center;
     text-align: center;
     align-items: center;
-    margin: 20px 0;
 
-    .service-card {
+    .service-card-1 {
       max-width: 350px;
+      height: 300px;
+
       display: block;
       margin: 20px;
-      background-color: rgba(128, 127, 133, 0.747);
-      height: 100%;
-      width: 100%;
+      background-image: url(../img/services-decoration.jpg);
+      background-size: cover;
+      background-position: bottom;
+    }
+
+    .service-card-2 {
+      max-width: 350px;
+      height: 300px;
+
+      display: block;
+      margin: 20px;
+      background-image: url(../img/services-floral-design.jpg);
+      background-size: cover;
+      background-position: center;
+    }
+
+    .service-card-3 {
+      max-width: 350px;
+      height: 300px;
+      display: block;
+      margin: 20px;
+      background-image: url(../img/service-events.jpg);
+      background-size: cover;
+      background-position: center;
+    }
+
+    .card-info {
+      background-color: rgba(52, 53, 51, 0.678);
       padding: 24px;
+      height: 100%;
     }
+  }
 
-    .title {
-      font-size: 24px;
-    }
+  .title {
+    font-size: 24px;
+  }
 
-    p {
-      padding: 15px 0;
-    }
+  p {
+    padding: 15px 0;
   }
 }
