--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -135,13 +135,88 @@ header {
   }
 }
 
-// @media only screen and (max-width: 1450px) {
-//   //  HEADER//
-//   .main-header,
-//   section {
-//     padding: 105px 20px;
-//   }
-// }
+// BODY//
+
+section {
+  .sect-info {
+    width: 100%;
+
+    .sm-flower {
+      height: 40px;
+      text-align: center;
+      img {
+        height: 30px;
+      }
+    }
+  }
+  p {
+    padding: 10px 0;
+  }
+}
+
+.services {
+  background-image: url(../img/services-cropped.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  // background-attachment: fixed;
+  width: 100%;
+  height: auto;
+
+  .service-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+
+    .service-card-1 {
+      max-width: 350px;
+      height: 300px;
+      display: block;
+      margin: 20px;
+      background-image: url(../img/services-decoration.jpg);
+      background-size: cover;
+      background-position: bottom;
+    }
+
+    .service-card-2 {
+      max-width: 350px;
+      height: 300px;
+      display: block;
+      margin: 20px;
+      background-image: url(../img/services-floral-design.jpg);
+      background-size: cover;
+      background-position: center;
+    }
+
+    .service-card-3 {
+      max-width: 350px;
+      height: 300px;
+      display: block;
+      margin: 20px;
+      background-image: url(../img/service-events.jpg);
+      background-size: cover;
+      background-position: center;
+    }
+
+    .card-info {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(52, 53, 51, 0.678);
+      padding: 24px;
+      height: 100%;
+    }
+  }
+
+  .title {
+    font-size: 24px;
+  }
+}
+
+// MEDIA//
 
 @media only screen and (max-width: 960px) {
   //  HEADER//
@@ -259,82 +334,37 @@ header {
 //   }
 // }
 
-// BODY//
+@media only screen and (max-width: 820px) {
+  .services {
+    .service-cards {
+      display: block;
 
-section {
-  .sect-info {
-    width: 100%;
+      .service-card-1 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        max-width: 100%;
+        margin: 20px 0 10px 0;
+      }
 
-    .sm-flower {
-      height: 40px;
-      text-align: center;
-      img {
-        height: 30px;
+      .service-card-2 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        max-width: 100%;
+        margin: 20px 0 10px 0;
+      }
+
+      .service-card-3 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        max-width: 100%;
+        margin: 20px 0 10px 0;
       }
     }
-  }
-}
-
-.services {
-  background-image: url(../img/services-cropped.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  // background-attachment: fixed;
-  width: 100%;
-  height: auto;
-
-  .service-cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-
-    .service-card-1 {
-      max-width: 350px;
-      height: 300px;
-
-      display: block;
-      margin: 20px;
-      background-image: url(../img/services-decoration.jpg);
-      background-size: cover;
-      background-position: bottom;
-    }
-
-    .service-card-2 {
-      max-width: 350px;
-      height: 300px;
-
-      display: block;
-      margin: 20px;
-      background-image: url(../img/services-floral-design.jpg);
-      background-size: cover;
-      background-position: center;
-    }
-
-    .service-card-3 {
-      max-width: 350px;
-      height: 300px;
-      display: block;
-      margin: 20px;
-      background-image: url(../img/service-events.jpg);
-      background-size: cover;
-      background-position: center;
-    }
-
-    .card-info {
-      background-color: rgba(52, 53, 51, 0.678);
-      padding: 24px;
-      height: 100%;
-    }
-  }
-
-  .title {
-    font-size: 24px;
-  }
-
-  p {
-    padding: 15px 0;
   }
 }
