--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -39,6 +39,18 @@ body {
   font-size: 18px;
 }
 
+.light-title {
+  font-family: "Vidaloka", serif;
+  color: #f7f3f0;
+  font-size: 6.7vw;
+}
+
+.light-para {
+  font-family: "Raleway", sans-serif;
+  color: #f7f3f0;
+  font-size: 18px;
+}
+
 .title-head,
 .para {
   text-align: center;
@@ -413,6 +425,44 @@ section {
   }
 }
 
+.order-background {
+  background-image: url(../img/order-background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: auto;
+
+  section {
+    padding: 40px 0;
+  }
+
+  .order-banner {
+    background-color: rgba(131, 100, 71, 0.856);
+    width: 100%;
+    height: auto;
+
+    .para {
+      margin-top: 20px;
+      a {
+        background-color: rgba(226, 148, 193, 1);
+        padding: 15px;
+        text-decoration: none;
+        border-radius: 15px;
+
+        span {
+          font-size: 16px;
+        }
+      }
+    }
+
+    .title {
+      font-size: 32px;
+    }
+  }
+}
+
 // MEDIA//
 
 @media only screen and (max-width: 1151px) {
@@ -592,13 +642,15 @@ section {
 }
 
 @media only screen and (min-width: 630px) {
-  .dark-title {
+  .dark-title,
+  .light-title {
     font-size: 42px;
   }
 }
 
 @media only screen and (max-width: 360px) {
-  .dark-title {
+  .dark-title,
+  .light-title {
     font-size: 24px;
   }
 }
