--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -517,6 +517,19 @@ section {
   width: 100%;
   height: auto;
 
+  .sect-info {
+    .title-head,
+    .para,
+    .sm-flower {
+      text-align: left;
+      padding: 0 20px;
+    }
+
+    .para {
+      margin-bottom: 20px;
+    }
+  }
+
   .flower-cards {
     display: flex;
     flex-wrap: wrap;
@@ -525,7 +538,7 @@ section {
       display: flex;
       width: 100%;
       max-height: 320px;
-      margin: 20px;
+      margin-bottom: 30px;
 
       .card-info {
         display: flex;
@@ -546,7 +559,7 @@ section {
       img {
         justify-content: flex-start;
         width: 75%;
-        object-fit: center;
+        object-fit: cover;
       }
 
       .order-btn {
@@ -616,6 +629,37 @@ section {
   }
 }
 
+@media only screen and (max-width: 1015px) {
+  .special {
+    .flower-cards {
+      .flower-card {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        max-height: 600px;
+
+        .card-info {
+          text-align: left;
+          padding: 0 15px;
+
+          p {
+            padding: 8px;
+          }
+        }
+
+        .title {
+          font-size: 20px;
+        }
+
+        img {
+          width: 100%;
+          height: 290px;
+        }
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 1000px) {
   section {
     padding: 30px 15px;
@@ -640,33 +684,6 @@ section {
       }
       .event-card-6 {
         width: 45%;
-      }
-    }
-  }
-
-  .special {
-    .flower-cards {
-      .flower-card {
-        width: 100%;
-        max-height: 600px;
-
-        .card-info {
-          text-align: left;
-          padding: 0 15px;
-
-          p {
-            padding: 8px;
-          }
-        }
-
-        .title {
-          font-size: 20px;
-        }
-
-        img {
-          width: 100%;
-          height: 290px;
-        }
       }
     }
   }
