--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -581,6 +581,42 @@ section {
   }
 }
 
+.additional {
+  width: 100%;
+  height: auto;
+  background-image: url(../img/portfolio-background.png);
+
+  .event-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 20px;
+
+    .card-info {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(226, 148, 178, 0.849);
+      width: 30%;
+      min-width: 300px;
+      height: 100px;
+      margin: 10px;
+
+      a {
+        text-decoration: none;
+        padding: 20px;
+      }
+    }
+  }
+
+  .title {
+    font-size: 32px;
+  }
+}
+
 // MEDIA//
 
 @media only screen and (max-width: 1151px) {
@@ -857,6 +893,25 @@ section {
       }
       .title {
         font-size: 22px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  .additional {
+    .event-cards {
+      margin-top: 10px;
+
+      .card-info {
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(226, 148, 178, 0.849);
+        width: 100%;
+        height: 80px;
+        margin: 10px;
       }
     }
   }
