--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -304,6 +304,11 @@ section {
       background-color: rgba(226, 148, 178, 0.849);
       padding: 24px;
       height: 100%;
+
+      a {
+        padding: 15px;
+        text-decoration: none;
+      }
     }
   }
 
@@ -522,7 +527,7 @@ section {
     .para,
     .sm-flower {
       text-align: left;
-      padding: 0 20px;
+      // padding: 0 20px;
     }
 
     .para {
@@ -537,7 +542,7 @@ section {
     .flower-card {
       display: flex;
       width: 100%;
-      max-height: 320px;
+      max-height: 400px;
       margin-bottom: 30px;
 
       .card-info {
@@ -617,6 +622,86 @@ section {
   }
 }
 
+footer {
+  .wrapper {
+    display: block;
+  }
+  .footer-info {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 200px;
+    justify-content: space-evenly;
+    margin-top: 20px;
+
+    .card {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 18%;
+      height: 100%;
+      text-align: center;
+
+      .sect-info {
+        display: flex;
+        flex-wrap: wrap;
+
+        p {
+          width: 100%;
+          padding: 5px 0;
+          margin: 10px 0;
+        }
+
+        a {
+          text-decoration: none;
+          padding: 5px 0 5px 0;
+        }
+      }
+
+      .title {
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .dark-title {
+        flex-wrap: wrap;
+        font-size: 28px;
+      }
+
+      .follow-us {
+        align-items: center;
+        overflow: hidden;
+
+        .icons {
+          display: flex;
+          flex-wrap: wrap;
+          height: auto;
+          margin-top: 20px;
+          background-color: none;
+          justify-content: flex-start;
+
+          svg {
+            height: 30px;
+            width: 30px;
+          }
+        }
+      }
+    }
+  }
+
+  .license {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    height: 68px;
+    padding: 0 20px;
+
+    svg {
+      fill: rgba(226, 148, 178, 0.849);
+    }
+  }
+}
+
 // MEDIA//
 
 @media only screen and (max-width: 1151px) {
@@ -665,7 +750,7 @@ section {
   }
 }
 
-@media only screen and (max-width: 1015px) {
+@media only screen and (max-width: 1115px) {
   .special {
     .flower-cards {
       .flower-card {
@@ -803,6 +888,51 @@ section {
         img {
           width: 100%;
           height: 200px;
+        }
+      }
+    }
+  }
+
+  footer {
+    .footer-info {
+      display: block;
+      width: 100%;
+      height: auto;
+      margin: 0 auto;
+      margin-top: 20px;
+
+      .card {
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+
+        .sect-info {
+          display: flex;
+          flex-wrap: wrap;
+        }
+
+        .title {
+          display: block;
+        }
+
+        .follow-us {
+          .icons {
+            display: block;
+            margin-top: 10px;
+
+            a {
+              height: 30px;
+              width: 30px;
+              margin: 5px;
+
+              svg {
+                height: 30px;
+                width: 30px;
+                fill: rgba(226, 148, 178, 0.849);
+              }
+            }
+          }
         }
       }
     }
