--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -57,6 +57,44 @@ body {
   width: 100%;
 }
 
+form {
+  input[type="email"],
+  input[type="submit"],
+  input[type="phone"],
+  input[type="text"],
+  textarea {
+    margin: 8px auto;
+    width: 90%;
+    height: 40px;
+    text-decoration: none;
+    border-radius: 50px;
+    border: none;
+    padding-left: 10px;
+    font-family: "Raleway", sans-serif;
+    font-size: 14px;
+  }
+
+  input[type="email"] {
+    text-align: left;
+    padding-left: 10px;
+    background-color: rgba(214, 211, 212, 0.849);
+  }
+
+  input[type="submit"] {
+    text-align: center;
+    background-color: rgba(226, 148, 178, 0.849);
+    color: #f7f3f0;
+    padding-left: 0px;
+    font-size: 16px;
+  }
+
+  textarea {
+    padding-top: 5px;
+    border-radius: 20px;
+    height: auto;
+  }
+}
+
 .main-header,
 section {
   padding: 105px 20px;
@@ -664,31 +702,81 @@ section {
         background-color: rgb(240, 231, 231);
         align-items: center;
         border-radius: 20px;
+      }
+    }
+  }
+}
 
-        input[type="email"],
-        input[type="submit"] {
-          margin: 5px auto;
-          width: 90%;
-          height: 40px;
-          text-decoration: none;
-          border-radius: 50px;
-          border: none;
-        }
+.contact-background {
+  background-image: url(../img/banner-background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: auto;
 
-        input[type="email"] {
-          text-align: left;
-          padding-left: 10px;
-          background-color: rgba(214, 211, 212, 0.849);
-        }
+  .contact {
+    background-color: rgba(97, 96, 95, 0.719);
+    width: 100%;
+    height: auto;
+    padding: 30px 0;
 
-        input[type="submit"] {
-          text-align: center;
-          background-color: rgba(226, 148, 178, 0.849);
-          font-family: "Raleway", sans-serif;
-          color: #f7f3f0;
-          font-size: 16px;
+    .wrapper {
+      flex-wrap: wrap;
+    }
+
+    .sect-info {
+      display: block;
+      width: 100%;
+      padding: 0 15px;
+
+      .title {
+        font-size: 30px;
+      }
+
+      .contact-wrapper {
+        margin: 15px 0;
+
+        .para-title {
+          font-size: 20px;
+          font-weight: 600;
         }
       }
+
+      p {
+        text-align: left;
+        padding: 0;
+      }
+
+      .map {
+        display: block;
+        height: 200px;
+        width: auto;
+        background-image: url(../img/map-grey.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 20px;
+        margin: 10px 0;
+      }
+    }
+  }
+
+  .form {
+    display: block;
+    width: 100%;
+    padding: 0 15px;
+    form {
+      display: flex;
+      margin: 10px auto;
+      padding: 10px 0;
+      flex-wrap: wrap;
+      width: 100%;
+      height: auto;
+      background-color: rgb(240, 231, 231);
+      align-items: center;
+      border-radius: 20px;
     }
   }
 }
@@ -1112,6 +1200,7 @@ footer {
       }
 
       .form {
+        width: auto;
         form {
           display: flex;
           margin: 10px 15px;
@@ -1127,6 +1216,57 @@ footer {
       }
     }
   }
+
+  .contact-background {
+    .contact {
+      padding: 60px 0;
+
+      .wrapper {
+        align-items: center;
+        flex-wrap: nowrap;
+      }
+
+      .sect-info {
+        .contact-info {
+          .contact-wrapper {
+            display: flex;
+          }
+        }
+        .title {
+          font-size: 42px;
+        }
+      }
+
+      .form {
+        form {
+          min-height: 420px;
+        }
+      }
+    }
+  }
+
+  // .sect-info {
+  //   display: block;
+  //   width: 100%;
+  //   padding: 0 15px;
+
+  //   .title {
+  //     font-size: 30px;
+  //   }
+
+  //   .contact-wrapper {
+  //     margin: 15px 0;
+
+  //     .para-title {
+  //       font-size: 20px;
+  //       font-weight: 600;
+  //     }
+  //   }
+
+  //   p {
+  //     text-align: left;
+  //     padding: 0;
+  //   }
 }
 
 @media only screen and (max-width: 760px) {
@@ -1199,6 +1339,16 @@ footer {
 
   .sub-background {
     .sub-banner {
+      .sect-info {
+        .title {
+          font-size: 26px;
+        }
+      }
+    }
+  }
+
+  .contact-background {
+    .contact {
       .sect-info {
         .title {
           font-size: 26px;
