--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -191,6 +191,7 @@ header {
 section {
   .sect-info {
     width: 100%;
+    height: auto;
 
     .sm-flower {
       height: 40px;
@@ -701,36 +702,35 @@ section {
 }
 
 .testimonials {
+  width: 100%;
+  height: auto;
   .cards {
-    display: block;
     width: 100%;
-    max-height: 600px;
     margin: 10px auto;
     display: flex;
-  }
+    justify-content: center;
 
-  /* Hide the images by default */
-  .card {
-    display: flex;
-    flex-direction: column;
-    margin: 0 10px;
-    justify-content: space-between;
-    background-color: rgb(240, 231, 231);
-    border-radius: 30px;
-    padding: 0 10px;
+    .card {
+      display: flex;
+      flex-direction: column;
+      margin: 0 10px;
+      justify-content: space-between;
+      background-color: rgb(240, 231, 231);
+      border-radius: 30px;
+      padding: 0 10px;
 
-    p {
-      max-width: 500px;
-      max-height: 500px;
-      text-align: center;
-      margin: 0 auto;
+      p {
+        max-width: 500px;
+        text-align: center;
+        margin: 0 auto;
 
-      .dark-title {
-        font-size: 22px;
-      }
+        .dark-title {
+          font-size: 22px;
+        }
 
-      .date {
-        font-size: 12px;
+        .date {
+          font-size: 12px;
+        }
       }
     }
   }
@@ -1314,6 +1314,35 @@ footer {
       }
     }
   }
+
+  .testimonials {
+    .cards {
+      flex-wrap: wrap;
+
+      .card {
+        max-width: 45%;
+        max-height: 300px;
+        margin: 10px;
+        flex-wrap: nowrap;
+
+        p {
+          max-height: 500px;
+
+          .dark-title {
+            font-size: 20px;
+          }
+
+          .dark-para {
+            font-size: 16px;
+          }
+
+          .date {
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 660px) {
@@ -1330,6 +1359,18 @@ footer {
         width: 100%;
         height: 80px;
         margin: 10px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .testimonials {
+    .cards {
+      flex-wrap: wrap;
+
+      .card {
+        max-width: 100%;
       }
     }
   }
