--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -117,7 +117,6 @@ header {
   width: 100%;
 }
 .header {
-  // display: block;
   width: 100%;
   background-image: url(../img/banner-background.jpg);
   height: auto;
@@ -1430,49 +1429,56 @@ footer {
 
 // TABLET//
 
-// @media only screen and (max-width: 800px) {
-//   //HEADER//
+@media only screen and (max-width: 800px) {
+  //HEADER//
 
-//     .menu,
-//     #menu {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     display: flex;
-//     flex-wrap: wrap;
-//     width: 100%;
-//     background-color: #3d3c3c;
-//     z-index: 10;
-//     margin: 0 auto;
-//     justify-content: center;
+  .menu,
+  #menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: #3d3c3c;
+    z-index: 10;
+    margin: 0 auto;
+    justify-content: center;
 
-//     .header-info {
-//       padding: 0;
-//     }
+    &.open {
+      display: flex;
+    }
 
-//     .nav-mobile {
-//       display: block;
-//       width: 100%;
-//       text-align: center;
-//       font-size: 18px;
+    .header-info {
+      padding-top: 20px;
+    }
 
-//       a {
-//         text-decoration: none;
-//         list-style: none;
-//       }
-//     }
+    .nav-mobile {
+      display: block;
+      width: 100%;
+      text-align: center;
+      font-size: 18px;
+      padding: 10px 0;
 
-//     .icons-mobile {
-//       display: flex;
-//       justify-content: center;
-//       width: 100%;
-//       height: 80px;
+      a {
+        text-decoration: none;
+        list-style: none;
+      }
+    }
 
-//       svg {
-//         height: 30px;
-//         width: 30px;
-//         margin: 0 10px;
-//         fill: rgba(226, 148, 178, 0.849);
-//       }
-//     }
-//   }
+    .icons-mobile {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: auto;
+      padding-top: 10px;
+
+      svg {
+        height: 30px;
+        width: 30px;
+        margin: 0 10px;
+        fill: rgba(226, 148, 178, 0.849);
+      }
+    }
+  }
+}
